--- a/css/general.css
+++ b/css/general.css
@@ -153,7 +153,7 @@ body {
 .bl-row {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+
 }
 .bl-3 {
     font-weight: 600;
@@ -330,6 +330,27 @@ padding-top: 10px;
 
 .prices_block > .card {
     min-width: 250px;
+}
+
+.row_flex {
+    display: flex;
+    flex-direction: row;
+}
+.column_flex {
+    display: flex;
+    flex-direction: column;
+}
+.column_flex h2 {
+    margin-bottom: 2.5rem;
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+    letter-spacing: .1rem;
+}
+.column_flex div {
+    font-size: 1.5rem;
+    font-weight: 300;
+    line-height: 2.5rem;
+    letter-spacing: .1rem;
 }
 
 @media (max-width: 760px) {
